--- a/css/stories.css
+++ b/css/stories.css
@@ -8,14 +8,6 @@
   color: gray;
   font-size: 0.8rem;
   margin: 10px 0;
-  border-bottom: 1px solid #e5e5e5;
-  padding-bottom: 10px;
-}
-
-#favorited-stories,
-#my-stories {
-  list-style: none;
-  padding-left: 20px;
 }
 
 #stories-loading-msg {
@@ -24,24 +16,36 @@
   margin: 20px 30px;
 }
 
+/* Remove icon on my Stories page */
 
-/* Individual stories */
+#rmv-icon {
+  margin-left: 5px;
+}
 
-.star,
-.trash-can {
-  font-size: 0.75rem;
-  margin: 0 5px;
+#rmv-icon:hover {
+  color: crimson;
   cursor: pointer;
 }
 
-.trash-can:hover {
-  color: crimson;
+/* edit icon on my stories page */
+.edit-icon {
+  margin-left: 5px;
 }
 
+.edit-icon:hover {
+  color: green;
+  cursor: pointer;
+}
+
+/* Individual stories */
+
+.fa-star:hover {
+  cursor: pointer;
+}
 .story-link {
   color: black;
   font-size: 0.85rem;
-  font-weight: normal;
+  font-weight: bold;
   margin: 18px 0;
 }
 
@@ -50,15 +54,16 @@
 }
 
 .story-author {
-  margin-left: 2em;
-  font-size: 0.85rem;
+  margin: 5px 1.5em;
+  display: block;
+  font-size: small;
+  font-weight: bold;  
   color: green;
-  padding: 6px 0;
 }
 
 .story-user {
+  font-size: small;
   display: block;
-  margin-left: 2em;
-  font-size: 0.85rem;
+  margin-left: 1.5em;
   color: orange;
 }
